@@ -1,3 +1,7 @@
+*** 20000821_1 by lusky
+fix for stats by a server causing a core
+
+
 *** 20000820_1 by lusky
 first shot at fixing a really old bug with USE_POLL that would cause the
   server to not parse queued commands until there was additional activity
